--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 
 
 html {
-    background-image: url(/img/back2.jpg);
+    background-image: url(./img/back2.jpg);
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
